# JadeFrame

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  333-compile_commands_bkp.json  CMakeLists.txt  JadeFrame.sln  README.md  build.py  build.sh  compile_commands.json
Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  example_0.h  example_5.h  example_empty.h  example_hello_triangle.h  example_moving_primitive.h  example_texture_quad.h  exmaple_rotating_primitive.h  gfxrecon_capture_20211009T203810.gfxr  imgui.ini  main.cpp
JadeFrame/: CMakeLists.txt  JadeFrame.vcxproj  JadeFrame.vcxproj.filters
JadeFrame/src/: JadeFrame.h  pch.h
JadeFrame/src/JadeFrame/: BaseApp.cpp  BaseApp.h  BaseRenderer.cpp  BaseRenderer.h  BaseShader.cpp  BaseShader.h  BatchRenderer.cpp  BatchRenderer.h  BatchShader.cpp  BatchShader.h  Core.h  FontManager.cpp  FontManager.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Input_backup.cpp  Input_backup.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  WinWindow.cpp  WinWindow.h  Window.cpp  Window.h  base_app.cpp  base_app.h  core.h  defines.h  font_manager.cpp  font_manager.h  gui.cpp  gui.h  macros.h  prelude.h  types.h
JadeFrame/src/JadeFrame/datatypes/: option.h  string.h
JadeFrame/src/JadeFrame/graphics/: BaseRenderer.cpp  BaseRenderer.h  BaseShader.cpp  BaseShader.h  BatchRenderer.cpp  BatchRenderer.h  BatchShader.cpp  BatchShader.h  CMakeLists.txt  Camera.cpp  Camera.h  GLBuffer.cpp  GLBuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  camera.cpp  camera.h  color.h  glsl_parser.cpp  glsl_parser.h  graphics_language.cpp  graphics_language.h  graphics_shared.cpp  graphics_shared.h  material_handle.cpp  material_handle.h  mesh.cpp  mesh.h  reflect.cpp  reflect.h  shader_loader.cpp  (+5 more)
JadeFrame/src/JadeFrame/graphics/d3d11/: README.md  d3d11_renderer.h
JadeFrame/src/JadeFrame/graphics/d3d12/: README.md  d3d12_renderer.h
JadeFrame/src/JadeFrame/graphics/opengl/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  README.md  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_debug.cpp  opengl_debug.h  opengl_object.cpp  opengl_object.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_shader_loader.cpp  opengl_shader_loader.h  opengl_texture.cpp  opengl_texture.h  opengl_windows.cpp  opengl_windows.h  opengl_wrapper.cpp  opengl_wrapper.h
JadeFrame/src/JadeFrame/graphics/opengl/platform/linux/: linux.cpp  linux.h
JadeFrame/src/JadeFrame/graphics/opengl/platform/win32/: win32.cpp  win32.h
JadeFrame/src/JadeFrame/graphics/software/: README.md  software_renderer.cpp  software_renderer.h
JadeFrame/src/JadeFrame/graphics/tests/: CMakeLists.txt  test_camera.cpp
JadeFrame/src/JadeFrame/graphics/vulkan/: CMakeLists.txt  README.md  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_buffers.cpp  command_buffers.h  context.cpp  context.h  debug.cpp  descriptor_set.cpp  descriptor_set.h  logical_device.cpp  logical_device.h  pch.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shared.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  sync_object.cpp  sync_object.h  to_spirv.cpp  to_spirv.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffers.cpp  vulkan_command_buffers.h  vulkan_command_pool.cpp  (+36 more)
JadeFrame/src/JadeFrame/graphics/vulkan/platform/win32/: surface.cpp  surface.h
JadeFrame/src/JadeFrame/graphics/vulkan/platform/x11/: surface.cpp  surface.h
JadeFrame/src/JadeFrame/math/: CMakeLists.txt  Mat4.cpp  Mat4.h  Math.cpp  Math.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  i128.h  mat.h  mat_4.cpp  mat_4.h  math.cpp  math.h  vec.cpp  vec.h  vec_2.cpp  vec_2.h  vec_3.cpp  vec_3.h  vec_4.cpp  vec_4.h
JadeFrame/src/JadeFrame/math/tests/: CMakeLists.txt  test0.cpp  test_math.cpp
JadeFrame/src/JadeFrame/platform/: CMakeLists.txt  platform_shared.cpp  platform_shared.h  window.cpp  window.h  window_event.h
JadeFrame/src/JadeFrame/platform/linux/: CMakeLists.txt  linux_input_manager.cpp  linux_input_manager.h  linux_system_manager.cpp  linux_system_manager.h  linux_time_manager.h  linux_window.cpp  linux_window.h
JadeFrame/src/JadeFrame/platform/windows/: CMakeLists.txt  WinInputManager.cpp  WinInputManager.h  WinSystemManager.cpp  WinSystemManager.h  WinTimeManager.cpp  WinTimeManager.h  WinWindow.cpp  WinWindow.h  WindowsMessageMap.cpp  WindowsMessageMap.h  windows_input_manager.cpp  windows_input_manager.h  windows_message_map.cpp  windows_message_map.h  windows_shared.cpp  windows_shared.h  windows_system_manager.cpp  windows_system_manager.h  windows_time_manager.cpp  windows_time_manager.h  windows_window.cpp  windows_window.h
JadeFrame/src/JadeFrame/ptr/: ptr.h
JadeFrame/src/JadeFrame/uilts/: Utils.h
JadeFrame/src/JadeFrame/utils/: CMakeLists.txt  assert.h  asset_loader.cpp  asset_loader.h  box.h  concepts.h  dynamic_array.h  logger.cpp  logger.h  option.h  result.h  traits.h  utils.cpp  utils.h
JadeFrame/src/JadeFrame/utils/tests/: CMakeLists.txt  test_box.cpp  test_option.cpp  test_result.cpp
cmake/: JadeFrameSanitizers.cmake  Utils.cmake  my_utils.cmake
doc/: design.md
docs/: README.md  design.md
examples/: CMakeLists.txt
examples/0/: CMakeLists.txt  main.cpp
examples/empty/: CMakeLists.txt  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/moving_primitive/: CMakeLists.txt  main.cpp
examples/moving_quad/: CMakeLists.txt  main.cpp
examples/rotating_primitive/: CMakeLists.txt  main.cpp
examples/texture_quad/: CMakeLists.txt  main.cpp
scripts/: make_flamegraph.sh
sourcetrail/: stjf.srctrlprj
